# hot-potato

./: CLAUDE.md  GETTING_STARTED.md  README.md  ngrok.yml  pnpm-lock.yaml
.ai/: ARCHITECTURE.md  PROMPTS.md  SYNC_REQUIREMENTS.md  TASKS.md  TROUBLESHOOTING.md
contracts/template/: Cargo.toml  Stylus.toml  rust-toolchain.toml
contracts/template/src/: lib.rs  main.rs
frontend/: index.html  package.json  tailwind.config.ts
frontend/public/: manifest.json
frontend/public/.well-known/: farcaster.json
frontend/src/: App.tsx  AppRouter.tsx  index.css  main.tsx  wagmi.ts
frontend/src/abi/: SampleNFT.json  TheArbitrumCore.json
frontend/src/components/auth/: NetworkGuard.tsx
frontend/src/components/core/: CoreThree.tsx  CoreVisual.tsx
frontend/src/components/effects/: Starfield.tsx
frontend/src/components/game/: TransferHUD.tsx
frontend/src/components/hud/: GameStatusPanel.tsx  HowToPlayModal.tsx  TerminalHUD.tsx
frontend/src/components/identity/: OperatorProfile.tsx
frontend/src/components/layout/: PageLayout.tsx  ViewHeader.tsx
frontend/src/components/ui/: HUDCard.tsx
frontend/src/hooks/: useHistoricalData.ts  useMeltdownMonitor.ts  useSynth.ts
frontend/src/views/: AnalyticsView.tsx  GameView.tsx  HomeView.tsx  SystemLogsView.tsx  TechTerminalView.tsx  VaultView.tsx
