[package]
name = "the_arbitrum_core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/hummusonrails/farcaster-arbitrum-miniapp-starter"
repository = "https://github.com/hummusonrails/farcaster-arbitrum-miniapp-starter"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "Starter template for building your own Farcaster Mini-App integrated with Arbitrum Stylus."

[dependencies]
stylus-sdk = { version = "=0.9.0", default-features = false }
mini-alloc = { version = "=0.9.0", default-features = false }
openzeppelin-stylus = { git = "https://github.com/OpenZeppelin/rust-contracts-stylus", tag = "v0.2.0", default-features = false }

alloy-primitives = { version = "0.8.20", default-features = false, features = ["tiny-keccak"] }

[dev-dependencies]
motsu = "0.10.0"

# Removed "alloy" dev-dependency to avoid c-kzg version conflict with motsu 0.10.0
# Motsu uses c-kzg 1.0.3, while newer Alloy requires 2.1.1. 
# We don't strictly need "alloy" for the contract logic itself, just primitives.

[features]
export-abi = ["stylus-sdk/export-abi", "openzeppelin-stylus/export-abi"]

[[bin]]
name = "genft"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"

[profile.release]
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true
lto = true
debug = false
rpath = false
debug-assertions = false
incremental = false